--- a/src/app/component/origin/origin.component.html
+++ b/src/app/component/origin/origin.component.html
@@ -6,7 +6,7 @@
                 <img src="assets/Login.png" alt="Logo" class="logo-image animate__animated animate__fadeIn"
                     style="width: 220px; height: 220px;">
                 <h2 class="tagline" class="animate__animated animate__tada" style="color: rgba(0,0,0,0.9);">
-                    <strong>"Divertite un rato"</strong>
+                    <strong>"Conéctate con tu Música"</strong>
                 </h2>
                 <div class="animate__animated animate__flash">
                     <button class="btn btn-shine" (click)="login()">Login</button>
