--- a/src/app/component/guess-song/guess-song.component.css
+++ b/src/app/component/guess-song/guess-song.component.css
@@ -215,14 +215,13 @@
 }
 
 /*------------------------------boton---------------------------*/
-/* BUTTON BLUE */
 .btn-shine {
     position: relative;
-    padding: 8px 30px; /* Reducido el padding */
+    padding: 6px 28px; /* Reducido el padding */
     font-family: 'Poppins', sans-serif;
-    font-size: 12px; /* Tamaño de fuente reducido */
+    font-size: 10px; /* Tamaño de fuente reducido */
     border: none;
-    letter-spacing: 2px; /* Aumentado el espacio entre letras */
+    letter-spacing: 1px; /* Aumentado el espacio entre letras */
     text-transform: uppercase;
     border-radius: 8px; /* Reducido el radio de borde */
     color: #fff;
@@ -235,12 +234,12 @@
       content: "";
       background: white;
       position: absolute;
-      top: -30px; /* Ajustado la posición superior */
-      left: -40px; /* Ajustado la posición izquierda */
-      width: 30px; /* Reducido el ancho */
-      height: 90px; /* Reducido la altura */
+      top: -30px; 
+      left: -40px; 
+      width: 20px; 
+      height: 90px;
       opacity: 0.3;
-      border-radius: 8px; /* Reducido el radio de borde */
+      border-radius: 8px; 
       transform: rotate(35deg);
       transition: all 650ms cubic-bezier(0.19, 1, 0.22, 1);
     }
