--- a/src/app/component/user-stats/user-stats.component.html
+++ b/src/app/component/user-stats/user-stats.component.html
@@ -1,81 +1,114 @@
-<app-navbar></app-navbar>
-<div>
-    <!--CREO QUE LOS ATRIBUTOS QUE ESTAMOS MANDANDO SON ENVIROMENTS-->
-    <button (click)="getTopArtists('long_term')">top large artistas</button>
-    <button (click)="getTopArtists('medium_term')">top medium artistas</button>
-    <button (click)="getTopArtists('short_term')">top short artistas</button>
-</div>
-<div>
-    <button (click)="getTopSongs('long_term')">top songs large term</button>
-    <button (click)="getTopSongs('medium_term')">top songs mediem term</button>
-    <button (click)="getTopSongs('short_term')">top songs short term</button>
-    <button (click)="promedio_popularity()">promedio</button>
-    <button (click)="getAudioFeatures()">audio Features</button>
-    <button (click)="getAudioStats()">audio stats</button>
-
-</div>
-
-<div *ngIf="topArtists">
-    <table class="table table-success table-striped">
-        <thead>
-            <tr>
-                <th scope="col">Photo</th>
-                <th scope="col">Artist Name</th>
-                <th scope="col">Genres</th>
-
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let artist of topArtists.items">
-                <td><img src="{{artist.images[2].url}}" alt=""></td>
-                <td>{{artist.name}}</td>
-                <td>
-                    <ng-container *ngFor="let genre of artist.genres; let last = last; let first = first">
-                        <ng-container *ngIf="!first && !last">, </ng-container>
-                        <ng-container *ngIf="last && !first"> & </ng-container>
-                        {{genre}}
-                    </ng-container>
-                </td>
-
-            </tr>
-        </tbody>
-    </table>
-</div>
+<div class="div-container">
+    <div class="background">
 
 
-<div *ngIf="topSongs">
-    <table class="table table-success table-striped">
-        <thead>
-            <tr>
-                <th scope="col">Top</th>
-                <th scope="col">Song</th>
-                <th scope="col">Artist Name</th>
-                <th scope="col">Album</th>
-                <th scope="col">Duration</th>
-                <th scope="col">Preview</th>
+        <app-navbar></app-navbar>
 
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let song of topSongs.items; let i= index">
-                <td>{{i+1}}</td>
-                <td>{{song.name}}</td>
-                <td>{{song.album.artists[0].name}}</td>
-                <td>{{song.album.name}}</td>
-                <td>{{song.duration_ms/60000}}</td>
-                <div *ngIf="previewStarted">
-                    <button (click)="playPreview(song.preview_url)">Reproducir</button>
+
+        <div class="persons-wrapper">
+            <div>
+                <div class="object">
+                    <div class="container" type="button" [routerLink]="['/stats/top-artist']" routerLinkActive="active">
+                        <div class="container-inner">
+                            <div class="animate__animated animate__bounceInDown">
+
+                                <img type="button" class="circle" style=" background-color: #FFE177;">
+                                <img type="button" class="img img1" src="assets/Artist.png">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="animate__animated animate__bounceInLeft">
+                        <div class="divider" style=" background-color: #FFE177;">
+                        </div>
+                    </div>
+
+                    <div class="animate__animated animate__bounceInUp">
+                        <span class="name">"TOP ARTISTAS"</span>
+                    </div>
+
+                    <div class="animate__animated animate__bounceInUp">
+                        <span class="title text-center"><strong>Averigua los artistas que más escuchaste en cualquier
+                                periodo
+                                que quieras.</strong></span>
+                    </div>
                 </div>
-                <div *ngIf="!previewStarted">
-                    <button (click)="pausePreview()">Pause</button>
-                </div>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<p>user-stats works!</p>
+            </div>
 
-<!--
+            <div class="object">
+
+                <div class="container" type="button" [routerLink]="['/stats/top-song']" routerLinkActive="active">
+                    <div class="container-inner">
+                        <div class="animate__animated animate__bounceInDown">
+                            <img class="circle" style=" background-color: #D1F19E;">
+                            <img class="img img2" src="assets/Song.png">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="animate__animated animate__bounceInRight">
+                    <div class="divider" style=" background-color: #D1F19E;">
+                    </div>
+                </div>
+
+                <div class="animate__animated animate__bounceInUp">
+                    <span class="name">"TOP CANCIONES"</span>
+                </div>
+
+                <div class="animate__animated animate__bounceInUp">
+                    <span class="title text-center"><strong>Investiga tus canciones más destacadas en cualquier periodo
+                            que quieras.</strong></span>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
+    <!--CREO QUE LOS ATRIBUTOS QUE ESTAMOS MANDANDO SON ENVIROMENTS
+
+      
+        <div>
+            <button (click)="getTopSongs('long_term')">top songs large term</button>
+            <button (click)="getTopSongs('medium_term')">top songs mediem term</button>
+            <button (click)="getTopSongs('short_term')">top songs short term</button>
+            <button (click)="promedio_popularity()">promedio</button>
+            <button (click)="getAudioFeatures()">audio Features</button>
+            <button (click)="getAudioStats()">audio stats</button>
+
+        </div>
+
+                            <div *ngIf="topArtists">
+                                <table class="table table-success table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Photo</th>
+                                            <th scope="col">Artist Name</th>
+                                            <th scope="col">Genres</th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let artist of topArtists.items">
+                                            <td><img src="{{artist.images[2].url}}" alt=""></td>
+                                            <td>{{artist.name}}</td>
+                                            <td>
+                                                <ng-container
+                                                    *ngFor="let genre of artist.genres; let last = last; let first = first">
+                                                    <ng-container *ngIf="!first && !last">, </ng-container>
+                                                    <ng-container *ngIf="last && !first"> & </ng-container>
+                                                    {{genre}}
+                                                </ng-container>
+                                            </td>
+
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+
+
     <td>
                     <ng-container *ngFor="let genre of song.genres; let last = last; let first = first">
                         <ng-container *ngIf="!first && !last">, </ng-container>
