agregado puntuacion visible en guess the song

--- a/src/app/component/guess-song/guess-song.component.css
+++ b/src/app/component/guess-song/guess-song.component.css
@@ -159,6 +159,12 @@
 
 }
 
+h2{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 /*-----------------------------------------------------------------*/
 
 .leaderboard__icon {
